// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match the correct snapshot 1`] = `
<div
  className="card"
>
  <h4>
    PL
  </h4>
  <YouTube
    className="video"
    containerClassName=""
    id={null}
    onEnd={[Function]}
    onError={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaybackQualityChange={[Function]}
    onPlaybackRateChange={[Function]}
    onReady={[Function]}
    onStateChange={[Function]}
    opts={
      Object {
        "height": "152",
        "width": "270",
      }
    }
    title="PL"
    videoId="abc123"
  />
  <a
    href="somelink"
    target="blank"
  >
     
    <i
      class="fas fa-info-circle"
    />
    More Info
  </a>
  <button
    className="favorites"
    onClick={[Function]}
  >
    <i
      class="fas fa-plus-circle"
    />
    Add to Favorites
  </button>
</div>
`;

exports[`Card should match the correct snapshot if the artist has been favorited 1`] = `
<div
  className="card"
>
  <h4>
    PL
  </h4>
  <YouTube
    className="video"
    containerClassName=""
    id={null}
    onEnd={[Function]}
    onError={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    onPlaybackQualityChange={[Function]}
    onPlaybackRateChange={[Function]}
    onReady={[Function]}
    onStateChange={[Function]}
    opts={
      Object {
        "height": "152",
        "width": "270",
      }
    }
    title="PL"
    videoId="abc123"
  />
  <a
    href="somelink"
    target="blank"
  >
     
    <i
      class="fas fa-info-circle"
    />
    More Info
  </a>
  <button
    className="favorites"
    onClick={[Function]}
  >
    <i
      class="fas fa-times-circle"
    />
    Remove from Favorites
  </button>
</div>
`;
